--- a/src/Styles/_globals.scss
+++ b/src/Styles/_globals.scss
@@ -1,31 +1,11 @@
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-  margin: 0 !important;
-}
-
 * {
-  font-size: 100%;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
+html,
 body {
-  margin: 0;
-  background: $lightpurple;
-}
-
-.ant-layout {
-  background: $lightpurple !important;
-  margin: 10px 15px 10px 55px;
-}
-
-.debit {
-  color: #008000;
-}
-
-.credit {
-  color: #ff0000;
+    height: 100%;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
 }
